force-app/main/default/objects/CaseItem__c/CaseItem__c.object-meta.xml
<CustomObject>
    <description>Oggetto figlio del Case su cui vengono salvati dettagli sul Case</description>
    <label>Dettaglio Case</label>
    <nameField>
        <displayFormat>DC-{0000000}</displayFormat>
        <label>Dettaglio Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dettaglio Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>