force-app/main/default/objects/CaseItem__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Dettaglio Case</relationshipLabel>
    <relationshipName>Dettaglio_Case</relationshipName>
    <type>Lookup</type>
</CustomField>