force-app/main/default/objects/CaseItem__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>Numero documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>