force-app/main/default/objects/CaseItem__c/fields/DocumentSelected__c.field-meta.xml
<CustomField>
    <fullName>DocumentSelected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documento selezionato</label>
    <referenceTo>DocumentSelected__c</referenceTo>
    <relationshipLabel>Dettaglio Case</relationshipLabel>
    <relationshipName>Dettaglio_Case</relationshipName>
    <type>Lookup</type>
</CustomField>