force-app/main/default/objects/CaseItem__c/fields/PaidComparisonTobepaid__c.field-meta.xml
<CustomField>
    <fullName>PaidComparisonTobepaid__c</fullName>
    <formula>PaidAmount__c - DocumentSelected__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confronto Pagato - Da pagare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>