force-app/main/default/objects/CaseItem__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Data Pagamento</label>
    <type>Date</type>
</CustomField>