force-app/main/default/objects/CaseItem__c/fields/PaymentDetails__c.field-meta.xml
<CustomField>
    <fullName>PaymentDetails__c</fullName>
    <label>Estremi di Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>