force-app/main/default/objects/CaseItem__c/recordTypes/HDT_RT_ComunicazionePagamento_CI.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_ComunicazionePagamento_CI</fullName>
    <active>true</active>
    <label>HDT_RT_ComunicazionePagamento_CI</label>
</RecordType>